--- a/pmr/src/App.css
+++ b/pmr/src/App.css
@@ -9,6 +9,10 @@ font-family: 'Montserrat', sans-serif; */
   --color5:#2E2C2F;
 }
 
+html body #root{
+  overflow-x: hidden;
+}
+
 .Nav{
   margin: .8rem;
   display: flex;
@@ -23,7 +27,7 @@ font-family: 'Montserrat', sans-serif; */
   border: none;
   border-radius: 15px;
   background-color: var(--color2);
-  color: var(--color1);
+  color: var(--color5);
   font-weight: bold;
 }
 
@@ -44,8 +48,29 @@ font-family: 'Montserrat', sans-serif; */
   align-items: center;
 }
 
+.book--image{
+  background-image: url(./book-cover.jpeg);
+  background-position: center;
+  background-size: cover;
+  width: 100vw;
+  height: 400px; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
+  color: var(--color5);
+}
+
+.title--container{
+  background-color: rgba(240, 240, 240, 0.424);
+  border-radius: 20px;
+
+}
+
+
 .title--header{
   font-family: 'Montserrat', sans-serif;
+  margin: 0px 3px;
 }
 
 .hero--form{
@@ -55,15 +80,64 @@ font-family: 'Montserrat', sans-serif; */
 }
 
 .hero--textbox{
-  height: 400px;
+  height: 300px;
   width: 80vw;
+  font-size: 1rem;
+  padding: .5rem;
+  font-family: 'Montserrat', sans-serif; 
 }
 
-.hero--form button{
-
+.hero--textbox:focus{
+  outline: 0px none transparent;
 }
 
-.hero--forms button:hover{
+.submit--button{
+  height: 30px;
+  width: 100px;
+  margin: 0px 10px;
+  border: none;
+  border-radius: 15px;
+  background-color: var(--color2);
+  color: var(--color5);
+  font-weight: bold;
+}
+
+.submit--button:hover{
   cursor: pointer;
   transform: scale(1.1);
+}
+
+.comment--container{
+  margin-top: 2rem;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.comment{
+  width: 80vw;
+  line-height: 1.5rem;
+  padding-top: 1rem;
+  border-top: 2px solid var(--color3);
+  font-size: .95rem;
+  margin: 0px;
+}
+
+.inner--comment--container{
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+.author, .date {
+  font-size: .8rem;
+  font-weight: 400;
+  margin: .3rem;
+}
+
+.date{
+  padding-bottom: 1rem; 
 }
