--- a/pmr/src/Styles/App.css
+++ b/pmr/src/Styles/App.css
@@ -49,7 +49,7 @@ html body #root{
 }
 
 .book--image{
-  background-image: url(./book-cover.jpeg);
+  background-image: url(../book-cover.jpeg);
   background-position: center;
   background-size: cover;
   width: 100vw;
@@ -80,8 +80,8 @@ html body #root{
 }
 
 .hero--textbox{
-  height: 300px;
-  width: 80vw;
+  height: 200px;
+  width: 75vw;
   font-size: 1rem;
   padding: .5rem;
   font-family: 'Montserrat', sans-serif; 
